--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ main {
 }
 
 .nav-tittle {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: bold;
   color: #131313;
 }
@@ -213,8 +213,11 @@ main {
     flex-direction: column;
   }
 
-  .team-img-container {
+  .team-img-container img {
     grid-template-columns: repeat(1, 1fr);
+    width:100%;
+    margin: 0 auto;
+    gap: 0;
   }
 
   .our-features {
