--- a/style.css
+++ b/style.css
@@ -219,6 +219,12 @@ main {
     margin: 0 auto;
     gap: 0;
   }
+    .feature-tittle {
+      color: #131313;
+      font-weight: bold;
+      font-size: 1.5rem;
+      margin-bottom: 18px;
+    }
 
   .our-features {
     width: 95%;
