--- a/style.css
+++ b/style.css
@@ -233,14 +233,13 @@ main {
 
   .team-img-container{
     grid-template-columns: repeat(1, 1fr);
-    /* width: 100%; */
     margin: 0 auto;
-    gap: 10px;
+    /* gap: 10px; */
     justify-content: center;
   }
      .team-img-container img{
       margin: 0 auto;
-      width: 300px;
+      width: 100%;
      }
 
   .feature-tittle {
