--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 .nav-container,
 .hero-container,
 main {
-  width: 75%;
+  width: 85%;
   max-width: 1440px;
   margin: 0 auto;
   align-items: center;
@@ -35,6 +35,10 @@ main {
   font-size: 1.1rem;
   font-weight: 500;
   cursor: pointer;
+}
+
+.description-color {
+  color: #727272;
 }
 
 /* ~~~~~~~~~common style~~~~~~~~~ */
@@ -98,7 +102,6 @@ main {
 
 .banner-discription {
   font-size: 1rem;
-  color: #727272;
   line-height: 26px;
   margin-bottom: 25px;
 }
@@ -110,7 +113,7 @@ main {
 }
 
 .team-container {
-  gap: 70px;
+  gap: 50px;
   align-items: center;
 }
 
@@ -122,14 +125,15 @@ main {
 }
 
 .our-features {
-  width: 537px;
+  width: 550px;
+  height: 304px;
   text-align: left;
 }
 
-.feature-tittle {
+.section-tittle {
   color: #131313;
   font-weight: bold;
-  font-size: 2.8rem;
+  font-size: 2.4rem;
   margin-bottom: 24px;
 }
 
@@ -145,10 +149,51 @@ main {
 
 .feature-description {
   font-size: 1rem;
-  color: #727272;
   line-height: 26px;
   margin-bottom: 32px;
 }
+
+
+/* ~~~~~facts style~~~~~ */
+.fact {
+  margin-top: 100px;
+}
+
+.facts-container {
+  margin: 0 auto;
+  padding: 100px 50px 0 50px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+
+
+.facts-card {
+  border: 1px solid #FF900E;
+  border-radius: 8px;
+  width: 240px;
+  padding: 45px 35px 59px 35px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.fact-number {
+  font-size: 2.6rem;
+  color: #424242;
+  font-weight: 600;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.facts-description {
+  font-size: 20px;
+  font-weight: 600;
+  max-width: 532px;
+  line-height: 26px;
+
+}
+
+
 
 
 
@@ -163,13 +208,48 @@ main {
     width: 95%;
   }
 
-  .team-img-container img{
+  .nav-tittle {
+    font-size: 1rem;
+
+  }
+
+  .team-img-container img {
     width: 100%;
     gap: 0px;
   }
-    .our-features{
-      width: 100%;
-    }
+
+  .our-features {
+    width: 100%;
+  }
+
+  .primary-button {
+    padding: 14px 20px;
+    font-size: 1.17rem;
+  }
+
+  /* ~~~~~~~~facts style~~~~~~ */
+  .fact {
+    margin-top: 50px;
+  }
+
+  .facts-container {
+    padding: 50px 30px 0 30px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    justify-content: space-around;
+    /* row-gap: 20px;
+    column-gap: 20px; */
+    gap: 20px;
+  }
+
+  .facts-card {
+    margin: 0 auto;
+  }
+
+  .facts-description {
+    max-width: 40px;
+  }
 }
 
 
@@ -231,16 +311,17 @@ main {
     margin: 0 auto;
   }
 
-  .team-img-container{
+  .team-img-container {
     grid-template-columns: repeat(1, 1fr);
     margin: 0 auto;
     /* gap: 10px; */
     justify-content: center;
   }
-     .team-img-container img{
-      margin: 0 auto;
-      width: 100%;
-     }
+
+  .team-img-container img {
+    margin: 0 auto;
+    width: 100%;
+  }
 
   .feature-tittle {
     color: #131313;
@@ -256,4 +337,22 @@ main {
   .team-container {
     gap: 40px;
   }
+
+  /* ~~~~facts section~~~~ */
+
+
+  .facts-container {
+    padding: 50px 50px 0 50px;
+    grid-template-columns: repeat(1, 4fr);
+    /* row-gap: 20px;
+      column-gap: 20px; */
+    padding: 100px 10px 0 10px;
+    gap: 20px;
+    margin: 0 auto;
+  }
+
+  .facts-card {
+    margin: 0 auto;
+  }
+
 }
